2014-09-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.6 release procedure:
 	Changes since nco-4_4_5: ncks -V, ncap2 -s -S, DAP cnf, ncra pck/mss/prm, HDF4, ncrename, NC4_SRD
	cd ~/nco;cvs tag -d nco-4_4_6;cvs tag -d nco-4_4_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.6 release"
	cvs tag -c nco-4_4_6;cvs tag -c nco-4_4_6-1

	* Avoid void arithmetic in USE_NC4_SRD_WORKAROUND

	* Change important nco_calloc() to nco_malloc() for speed

	* Fix ncwa handling of packed variables for minimization/maximization

	* Implement strncasecmp() for Windows and MSVC compilers

	* Fix count bug in USE_NC4_SRD_WORKAROUND

2014-09-29  Charlie Zender  <zender@uci.edu>

	* Implement USE_NC4_SRD_WORKAROUND by default in all applicable	cases, i.e.,
	for singly strided hyperslab access to netCDF4 files.

2014-09-26  Charlie Zender  <zender@uci.edu>

	* Implement workaround to nc_get_vars() slowdown for netCDF4 in netCDF library
	Workaround avoids nc_get_vars() and instead loops through calls to nc_get_vara()
	Workaround implemented in nco_msa_get_var_trv() and activated, for now, by -D 6

	* Finish ncrename rewrite. All capabilities work. No regressions.
	Some debugging, syntax, and documentation remains to be done

2014-09-24  Charlie Zender  <zender@uci.edu>

	* Use netcdf_meta.h in nco.h to enable chunking/deflation calls	for HDF4

	* ncrename now builds and works again for all but attributes

2014-09-23  Charlie Zender  <zender@uci.edu>

	* Print extended file format as _SOURCE_FORMAT with ncks --hdn

	* Remove nco_dmn_usr_sng() and nco_obj_usr_sng() due to flawed algorithms

	* Finish ncrename re-write for variables, groups, and dimensions
	NCO versions 4.3.3-4.4.5 broke "." support and did not fully support groups
	Those versions renamed first and ignored subsequent instances of old_nm
	Now ncrename fails as intended when required objects are not present
	Attributes are more complex and are still broken

2014-09-22  Charlie Zender  <zender@uci.edu>
