@@ -1,10 +1,14 @@
-2014-09-30  Charlie Zender  <zender@uci.edu>
+2014-10-01  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.6 release procedure:
- 	Changes since nco-4_4_5: ncks -V, ncap2 -s -S, DAP cnf, ncra pck/mss/prm, HDF4, ncrename, NC4_SRD
+ 	Changes since nco-4_4_5: ncks -V, ncap2 -s -S, DAP cnf, ncra pck/mss/prm, HDF4, ncrename, NC4_SRD, -0
 	cd ~/nco;cvs tag -d nco-4_4_6;cvs tag -d nco-4_4_6-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.6 release"
 	cvs tag -c nco-4_4_6;cvs tag -c nco-4_4_6-1
+
+	* Add negative zero syntax to select last element of hyperslab
+
+2014-09-30  Charlie Zender  <zender@uci.edu>
 
 	* Avoid void arithmetic in USE_NC4_SRD_WORKAROUND
 
